changing 'angularjs' dependency to 'angular'

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "html2canvas": "~0.4.1",
     "jspdf": "~1.0.178",
-    "angularjs": "~1.2.23",
+    "angular": "~1.2.23",
     "pixastic-crop": "*"
   },
   "devDependencies": {
